# trt-shim-rocm

./: .gitignore  CMakeLists.txt  NOTICE  README.md  THIRD_PARTY.md
docs/: ARCHITECTURE.md  dynamic_concat_repro.cpp  migraphx-findings.md
include/compat/: cuda.h  cuda_fp16.h  cuda_profiler_api.h  cuda_runtime.h  cuda_runtime_api.h
src/: backend.cpp  backend.h  plugin_stub.cpp  shim.cpp
test/: onnx_scoreboard.md  run_gpu_tests.sh
test/golden/: golden.txt
test/models/: dyn_cnn.onnx  mnist_cnn.onnx
tools/: driver_smoke.cpp  dyn_run.cpp  gen_mnist_pgms.py  gen_stubs.py  make_dynamic_model.py  make_golden.py  make_model_and_golden.py  make_resnet_golden.py  migraphx_smoke.cpp  onnx_backend_scoreboard.py  sweep_models.sh  trt_infer.cpp  trt_run.cpp  trtshim_dyn_run.cpp  trtshim_infer.cpp  trtshim_run.cpp
